--- a/IBANKER/src/sass/main.sass
+++ b/IBANKER/src/sass/main.sass
@@ -33,6 +33,18 @@
 @import "../modules/footer"
 /* -- Footer END -- */
 
+/* -- Social BEGIN -- */
+@import "../modules/social"
+/* -- Social END -- */
+
+/* -- Languages BEGIN -- */
+@import "../modules/lang"
+/* -- Languages END -- */
+
+/* -- Contacts elements BEGIN -- */
+@import "../modules/contacts"
+/* -- Contacts elements END -- */
+
 
 
 /* -- Main page BEGIN -- */
