--- a/IBANKER/src/pages/home/_page.sass
+++ b/IBANKER/src/pages/home/_page.sass
@@ -2,13 +2,7 @@
 	position: relative
 	z-index: 1
 	+media-min(lg)
-		min-height: 620px
 		height: 100vh
-	// position: absolute
-	// top: 0
-	// left: 0
-	// right: 0
-	// bottom: 0
-	// width: 100%
-	// height: 100vh
-	// z-index: 1
+		min-height: 620px
+	+media-min(xxl)
+		min-height: 920px
