--- a/IBANKER/src/css/styles.css
+++ b/IBANKER/src/css/styles.css
@@ -352,48 +352,53 @@ p {
 }
 
 .header__menu-btn {
-  display: inherit;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: inherit;
-  -webkit-align-items: inherit;
-  -ms-flex-align: inherit;
-  align-items: inherit;
-  -webkit-box-pack: inherit;
-  -webkit-justify-content: inherit;
-  -ms-flex-pack: inherit;
-  justify-content: inherit;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   cursor: pointer;
   height: 18px;
   width: 30px;
+  position: relative;
 }
 
 .header__menu-btn-line {
   width: 100%;
-  height: 2px;
+  height: 1px;
   background-color: #fff;
   -webkit-transition: .4s all ease;
   -o-transition: .4s all ease;
   transition: .4s all ease;
+  position: absolute;
+  left: 0;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+}
+
+.header__menu-btn-line_top {
+  top: 0;
 }
 
 .header__menu-btn-line_center {
-  margin: 6px 0;
+  top: 50%;
 }
 
-.header__menu-btn:hover .header__menu-btn-line_top {
-  margin-bottom: -2px;
-}
-
-.header__menu-btn:hover .header__menu-btn-line_center {
-  margin: 0;
-}
-
-.header__menu-btn:hover .header__menu-btn-line_bottom {
-  margin-top: -2px;
+.header__menu-btn-line_bottom {
+  bottom: 0;
 }
 
 .header__menu-btn_active .header__menu-btn-line {
@@ -401,10 +406,10 @@ p {
 }
 
 .header__menu-btn_active .header__menu-btn-line_top {
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-  margin-bottom: -2px;
+  -webkit-transform: rotate(45deg) translate(0, -50%);
+  -ms-transform: rotate(45deg) translate(0, -50%);
+  transform: rotate(45deg) translate(0, -50%);
+  top: 50%;
 }
 
 .header__menu-btn_active .header__menu-btn-line_center {
@@ -415,10 +420,11 @@ p {
 }
 
 .header__menu-btn_active .header__menu-btn-line_bottom {
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  margin-top: -2px;
+  -webkit-transform: rotate(-45deg) translate(0, -50%);
+  -ms-transform: rotate(-45deg) translate(0, -50%);
+  transform: rotate(-45deg) translate(0, -50%);
+  bottom: auto;
+  top: 50%;
 }
 
 .header__menu-btn_disabled {
@@ -1291,26 +1297,6 @@ p {
   .header__menu-btn {
     width: 25px;
     height: 14px;
-  }
-
-  .header__menu-btn-line {
-    height: 1px;
-  }
-
-  .header__menu-btn:hover .header__menu-btn-line_top {
-    margin-bottom: -1px;
-  }
-
-  .header__menu-btn:hover .header__menu-btn-line_bottom {
-    margin-top: -1px;
-  }
-
-  .header__menu-btn_active .header__menu-btn-line_top {
-    margin-bottom: -1px;
-  }
-
-  .header__menu-btn_active .header__menu-btn-line_bottom {
-    margin-top: -1px;
   }
 
   .footer {
