--- a/IBANKER/src/modules/_header.sass
+++ b/IBANKER/src/modules/_header.sass
@@ -118,52 +118,43 @@
 			width: 65px
 
 	&__menu-btn
-		display: inherit
+		display: flex
 		flex-direction: column
-		align-items: inherit
-		justify-content: inherit
+		align-items: center
+		justify-content: center
 		cursor: pointer
 		height: 18px
 		width: 30px
+		position: relative
 		+media(sm)
 			width: 25px
 			height: 14px
 		&-line
 			width: 100%
-			height: 2px
+			height: 1px
 			background-color: #fff
 			transition: .4s all ease
+			position: absolute
+			left: 0
+			transform: translate(0, -50%)
+			&_top
+				top: 0
 			&_center
-				margin: 6px 0
-			+media(sm)
-				height: 1px
-		&:hover
-			.header__menu-btn-line
-				&_top
-					margin-bottom: -2px
-					+media(sm)
-						margin-bottom: -1px
-				&_center
-					margin: 0
-				&_bottom
-					margin-top: -2px
-					+media(sm)
-						margin-top: -1px
+				top: 50%
+			&_bottom
+				bottom: 0
 		&_active
 			.header__menu-btn-line
 				margin: 0
 				&_top
-					transform: rotate(45deg)
-					margin-bottom: -2px
-					+media(sm)
-						margin-bottom: -1px
+					transform: rotate(45deg) translate(0, -50%)
+					top: 50%
 				&_center
 					opacity: 0
 					transform: translate(-50%, 0)
 				&_bottom
-					transform: rotate(-45deg)
-					margin-top: -2px
-					+media(sm)
-						margin-top: -1px
+					transform: rotate(-45deg) translate(0, -50%)
+					bottom: auto
+					top: 50%
 		&_disabled
 			pointer-events: none
